// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`TextInput should be rendered correctly 2`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    onChange={[Function]}
    onKeyDown={[Function]}
    type="text"
    value=""
  />
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <SvgrURL
      className=""
    />
  </div>
  <div
    className="container uui-icon uui-enabled -clickable"
    style={Object {}}
  >
    <SvgrURL
      className="flipY"
    />
  </div>
</div>
`;
